--- a/cf.yml
+++ b/cf.yml
@@ -1,10 +1,10 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: "meshify sns"
+Description: "flows sns"
 Resources:
-  MESHIFYsnssendmailFunction:
+  sendmailFunction:
     Type: AWS::Lambda::Function
     Properties:
-      Code: MESHIFY_sns_sendmail
+      Code: sendmail
       Handler: index.handler
       Role:
         Fn::GetAtt: [ LambdaRole , Arn ]
@@ -67,13 +67,13 @@ Resources:
               Action:
               - lambda:InvokeFunction
               Resource:
-                Fn::GetAtt: [ MESHIFYsnssendmailFunction , Arn ]
+                Fn::GetAtt: [ sendmailFunction , Arn ]
 Outputs:
-  MESHIFYsnssendmailFunction:
-    Description: '/MESHIFY/MESHIFY/sns/sendmail/lambda'
+  sendmailFunction:
+    Description: 'sendmail'
     Value:
-      Fn::GetAtt: [ MESHIFYsnssendmailFunction , Arn ]
-  MESHIFYsnssendmailRole:
-    Description: '/MESHIFY/MESHIFY/sns/sendmail/role'
+      Fn::GetAtt: [ sendmailFunction , Arn ]
+  sendmailRole:
+    Description: 'sendmail'
     Value:
       Fn::GetAtt: [ InvokeRole , Arn ]
